# rust-near-indexer

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TRACING.md  cloudbuild.yaml  docker-compose.tracing.yml  docker-compose.yml
clickhouse/init/: 01-core-tables.sql  02-silver-tables.sql  03-gold-views.sql
indexer-clickhouse/: Cargo.toml
indexer-clickhouse/src/: config.rs  database.rs  main.rs
indexer-clickhouse/src/handlers/: events.rs  mod.rs  receipts_and_outcomes.rs  transactions.rs
indexer-common/: Cargo.toml
indexer-common/src/: config.rs  lib.rs  metrics.rs
indexer-common/src/cache/: mod.rs
indexer-common/src/extractors/: events.rs  mod.rs  receipts_and_outcomes.rs  silver_transfers.rs  transactions.rs
indexer-common/src/handlers/: events.rs  mod.rs  receipts_and_outcomes.rs  transactions.rs
indexer-explorer/: Cargo.toml  README.md
indexer-explorer/src/: config.rs  database.rs  handlers.rs  main.rs
indexer-postgres/: Cargo.toml  README.md
indexer-postgres/migrations/: 20250225000000_create_silver_dip4_transfers.sql
indexer-postgres/src/: config.rs  database.rs  handlers.rs  main.rs
indexer-primitives/: Cargo.toml
indexer-primitives/src/: lib.rs
scripts/: cross-validate-pg.sh  cross-validate.sh  validate.sh
src/: config.rs  database.rs  event_handler.rs  main.rs  metrics.rs  retry.rs  token_holders_checkpoint.rs  types.rs
src/cache/: local.rs  mod.rs  redis.rs
src/handlers/: events.rs  execution_outcomes.rs  mod.rs  receipts.rs  receipts_and_outcomes.rs  transactions.rs
