[package]
name = "near-defuse-indexer"
version = "0.2.0"
edition = "2024"
rust-version = "1.86.0"

[[bin]]
name = "near-defuse-indexer"
path = "src/main.rs"

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.51"
async-trait = "0.1"
cached = "0.56.0"
clap = { version = "4.5", features = ["derive", "env"] }
clickhouse = { version = "0.13.2", features = ["rustls-tls"] }
dotenv = "0.15.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
near-lake-framework = "0.7.13"
once_cell = "1.8.0"
prometheus = "0.13.1"
redis = { version = "0.32", features = ["aio", "tokio-comp"] }
regex = "1.5.4"
serde = "1.0.106"
serde_json = "1.0.55"
futures = "0.3.5"
tokio = { version = "1.1", features = [
    "sync",
    "time",
    "rt-multi-thread",
    "macros",
] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
actix-web-httpauth = "0.8.2"

[dev-dependencies]
tokio = { version = "1.1", features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
    "full",
    "test-util",
] }
serde = { version = "1.0.106", features = ["derive"] }
clickhouse = { version = "0.13.2", features = ["test-util"] }
