[package]
name = "near-defuse-indexer"
version = "0.2.1"
edition = "2024"
rust-version = "1.86.0"

[[bin]]
name = "near-defuse-indexer"
path = "src/main.rs"

[dependencies]
actix-web = "4.5.1"
actix-web-httpauth = "0.8.2"
anyhow = "1.0.51"
async-trait = "0.1"
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive", "env"] }
clickhouse = { version = "0.13.2", features = ["rustls-tls"] }
dotenv = "0.15.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
lru = "0.16.0"
once_cell = "1.8.0"
prometheus = "0.13.1"
redis = { version = "0.32", features = [
    "aio",
    "tokio-comp",
    "connection-manager",
] }
regex = "1.5.4"
serde = "1.0.106"
serde_json = "1.0.55"
futures = "0.3.5"
tokio = { version = "1.47.1", features = [
    "sync",
    "time",
    "rt-multi-thread",
    "macros",
] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.20.0"
opentelemetry = "0.20.0"
opentelemetry_sdk = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0", features = [
    "http-proto",
    "reqwest-client",
] }
opentelemetry-semantic-conventions = "0.12.0"

blocksapi-rs = { git = "https://github.com/defuse-protocol/blocksapi-rs.git", branch = "main" }
