[workspace]
members = [
    "indexer-primitives",
    "indexer-common",
    "indexer-clickhouse",
    "indexer-postgres",
]
resolver = "3"

[workspace.dependencies]
# Shared across crates
actix-web = "4.5.1"
actix-web-httpauth = "0.8.2"
anyhow = "1.0.51"
blocksapi = { git = "https://github.com/defuse-protocol/blocksapi-rs.git", tag = "v0.2.0" }
clap = { version = "4.5", features = ["derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.5"
lazy_static = "1.4.0"
opentelemetry = "0.20.0"
opentelemetry_sdk = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0", features = ["http-proto", "reqwest-client"] }
opentelemetry-semantic-conventions = "0.12.0"
prometheus = "0.13.1"
redis = { version = "0.32", features = ["aio", "tokio-comp", "connection-manager"] }
serde = "1.0.106"
serde_json = "1.0.55"
tokio = { version = "1.47.1", features = ["sync", "time", "rt-multi-thread", "macros"] }
tokio-retry = "0.3"
tokio-stream = "0.1"
tracing = "0.1.13"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.20.0"
chrono = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "bigdecimal", "migrate", "chrono"] }

# Internal crates
indexer-primitives = { path = "indexer-primitives" }
indexer-common = { path = "indexer-common" }
