[package]
name = "near-defuse-indexer"
version = "0.3.0"
edition = "2024"
rust-version = "1.90.0"

[[bin]]
name = "near-defuse-indexer"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
blocksapi.workspace = true
clap.workspace = true
clickhouse = { version = "0.13.2", features = ["rustls-tls", "inserter"] }
dotenv.workspace = true
futures.workspace = true
indexer-common.workspace = true
serde.workspace = true
indexer-primitives = { workspace = true, features = ["clickhouse"] }
tokio.workspace = true
tokio-retry.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
