[package]
name = "near-defuse-indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "near-defuse-indexer"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
aws-config = { version = "1.1.3", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.13.0"
blocksapi.workspace = true
clap.workspace = true
clickhouse = { version = "0.13.2", features = ["rustls-tls", "inserter"] }
dotenv.workspace = true
futures.workspace = true
indexer-common.workspace = true
near-lake-framework = "0.7"
serde.workspace = true
indexer-primitives = { workspace = true, features = ["clickhouse"] }
tokio.workspace = true
tokio-retry.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
