[package]
name = "indexer-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "indexer_common"
path = "src/lib.rs"

[dependencies]
actix-web.workspace = true
actix-web-httpauth.workspace = true
anyhow.workspace = true
blocksapi.workspace = true
clap.workspace = true
futures.workspace = true
indexer-primitives.workspace = true
lazy_static.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
prometheus.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
