[package]
name = "indexer-explorer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "indexer-explorer"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
blocksapi.workspace = true
clap.workspace = true
dotenv.workspace = true
futures.workspace = true
indexer-common.workspace = true
indexer-primitives.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
