[package]
name = "indexer-postgres"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"

[[bin]]
name = "indexer-postgres"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
blocksapi.workspace = true
clap.workspace = true
dotenv.workspace = true
futures.workspace = true
indexer-common.workspace = true
indexer-primitives.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
