[package]
name = "indexer-primitives"
version = "0.3.0"
edition = "2024"
rust-version = "1.90.0"

[features]
default = []
clickhouse = ["dep:clickhouse"]

[dependencies]
anyhow.workspace = true
blocksapi.workspace = true
clickhouse = { version = "0.13.2", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
